--- a/resources/style.css
+++ b/resources/style.css
@@ -43,6 +43,8 @@ h1 {
 
 }
 
+/* Nav Bar */
+
 nav {
     background-color: #064497;
     border: 5px solid #064497;
@@ -63,19 +65,37 @@ nav ul li {
     display: inline-block;
 }
 
-#my-photo {
-    width: 20%;
-    display: block;
-    margin: 0 auto;
-    border-radius: 0.5vw 50% 50% 50%;
-    margin: 0 auto;
+/* Main Section */
+
+#home-container {
+    display: flex;
 }
 
-.text {
-    text-align: center;
+#my-photo {
+    border-radius: 0.5vw 50% 50% 50%;
+    width: 30%;
+    height: 30%;
+    display: block;
+    margin: 2vw;
 }
 
 .blue {
     color: #064497;
     font-weight: bold;
+}
+
+#text-container {
+    display: flex;
+    flex-direction: column;
+}
+
+#text-container p {
+    max-width: 40%;
+    font-size: 2.5vw;
+}
+
+#text-container h1 {
+    margin: 0;
+    font-size: 5vw;
+
 }
