make nav more mobile compatible

--- a/resources/style.css
+++ b/resources/style.css
@@ -47,7 +47,7 @@ h1 {
 
 nav {
     background-color: #064497;
-    border: 5px solid #064497;
+    border: 0.5vw solid #064497;
     border-radius: 0.5vw 100px 100px 200px;
     margin: 1vw;
     max-width: fit-content;
@@ -56,12 +56,16 @@ nav {
 
 }
 
+ul {
+    padding: 0;
+    padding-left: calc(1.5vw + 2px);
+}
+
 nav ul li {
     font-family: 'Gilroy-Bold';
-    font-size: 36px;
+    font-size: 2vw;
     color: white;
     margin: 0 0.5vw;
-    background-color: #064497;
     display: inline-block;
 }
 
