--- a/resources/style.css
+++ b/resources/style.css
@@ -50,7 +50,7 @@ nav {
     border: calc(0.5vw - 2px) solid #064497;
     border-radius: 0.5vw 100px 100px 200px;
     margin: 1vw;
-    max-width: fit-content;
+    display: table;
     margin-left: auto;
     padding: 0;
 }
