--- a/resources/style.css
+++ b/resources/style.css
@@ -21,17 +21,16 @@
 }
 /* Background Image */
 
-body {
-  /* The image used */
-  background-image: 
-  linear-gradient(rgb(255, 255, 255, 0.6), rgba(255, 255, 255, 0.6)), 
-  url("./images/Background.jpg");
-  /* Full height */
-  height: 100%;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-}
+html {
+    /* The image used */
+      background:   linear-gradient(rgb(255, 255, 255, 0.4), rgba(255, 255, 255, 0.4)), 
+      url(./images/Background.jpg) no-repeat center center fixed; 
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
+  }
+
 /* Basic Text Styling */
 
 p {
