--- a/resources/style.css
+++ b/resources/style.css
@@ -23,7 +23,7 @@
 
 html {
     /* The image used */
-      background:   linear-gradient(rgb(255, 255, 255, 0.4), rgba(255, 255, 255, 0.4)), 
+      background: radial-gradient(rgb(255, 255, 255, 0.5), rgba(6, 68, 151, 0.1)), 
       url(./images/Background.jpg) no-repeat center center fixed; 
       -webkit-background-size: cover;
       -moz-background-size: cover;
@@ -66,9 +66,21 @@ nav ul li a{
     text-decoration: none;
 }
 
+/* Paper Plane */
+
+.paper-plane {
+    height: 150px;
+    top: 50%;
+    left: -200px;
+    overflow: hidden;
+    position: absolute;
+}
+
+
+
 /* Main Section */
 
-#home {
+#home-container {
     display: flex;
     justify-content: center;
     align-items: center;
