fix text sizing problem with nav

--- a/resources/style.css
+++ b/resources/style.css
@@ -130,7 +130,7 @@ nav ul li a{
     }
 
     .nav-links a {
-        font-size: 4vh;
+        font-size: 8vw;
         color: white;
         text-decoration: none;
 
