--- a/resources/style.css
+++ b/resources/style.css
@@ -32,13 +32,13 @@ html {
       -moz-background-size: cover;
       -o-background-size: cover;
       background-size: cover;
-      overflow-x: hidden;
-  } 
+} 
 
 /* Basic Text Styling and more*/
 
 p {
     font-size: 36px;
+    font-weight: 300;
 }
 
 h1 {
@@ -230,6 +230,7 @@ nav ul li a{
     display: block;
     width: 30%;
     margin: 0 auto;
+    transform: rotate(-90deg);
 }
 
 @media screen and (max-width:768px) {
@@ -258,42 +259,38 @@ nav ul li a{
     
 }
 
-/* Test Sections */
+/* Scroll to Snap*/
+
+body {
+    width: 100vw;
+    height: 100vh;
+    margin: 0;
+}
+
+main {
+    width: 100%;
+    height: 100%;
+    scroll-snap-type: x mandatory;
+    overflow-x: scroll;
+    display: flex;
+}
 
 section {
-    height: 100vh;
-    scroll-snap-align: center;
-}
-
-.container {
-    scroll-snap-type: y mandatory;
-    overflow-y: scroll;
-    height: 100vh; 
-}
-
-
-#home {
-    height: 100vh;
-}
-
-#about-me, #projects, #contact-me {
-    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100vw;
+    height: 100vh;
+    scroll-snap-align: start;
+    flex: none;
 }
 
 #about-me {
-    background-color: blue;
-    opacity: 0.5;
+    background-color: rgba(0, 128, 0, 0.5);
 }
-
 #projects {
-    background-color: red;
-    opacity: 0.5;
+    background-color: rgba(0, 45, 128, 0.5);
 }
-
 #contact-me {
-    background-color: green;
-    opacity: 0.5;
+    background-color: rgba(128, 0, 0, 0.5);
 }
