--- a/resources/style.css
+++ b/resources/style.css
@@ -291,6 +291,16 @@ nav ul li a{
     max-width: 98%;
 }
 
+@media only screen and (max-width: 1150px) {
+    #text-container2 p {
+        font-size: 3.5vw;
+    }
+
+    #text-container2 h1 {
+        font-size: 7vh;
+    }
+}
+
 @media only screen and (max-width:768px) {
 
 
@@ -315,7 +325,7 @@ nav ul li a{
 
     #my-photo-mobile {
         display: inline-block;
-        width: 70%;
+        width: 40%;
         height: auto;
     }
 }
