add mobile version for projects. still need to add ipad version

--- a/resources/style.css
+++ b/resources/style.css
@@ -369,6 +369,7 @@ nav ul li a{
     text-align: center;
     padding: 15px;
     color: #064497;
+    animation: float 3s ease-in-out infinite;
 }
 #projects img {
     max-width: 100%;
@@ -377,6 +378,11 @@ nav ul li a{
 }
 
 /* Programming Section */
+
+
+#projects {
+    height: 280vh;
+}
 
 .projects-container-programming img {
     filter: brightness(30%);
@@ -394,7 +400,7 @@ nav ul li a{
 
 .project-box {
     width: 30%;
-    height: 30%;
+    height: 50vh;
     display: grid;
     grid-template: repeat(5, 1fr) / repeat(10, 1fr);
     justify-items: center;
@@ -433,31 +439,31 @@ nav ul li a{
     grid-template: repeat(50, 1fr) / repeat(50, 1fr);
     width: 100%;
     height: 150vh;
-    padding: 2vw;
 }
 
 .projects-container-design img{
     padding: 1vw;
+    max-width: 100%;
 }
 
 #design-one{
-    grid-area: 1 / 1 / span 30 / span 30;
+    grid-area: 1 / 1 / span 10 / span 30;
 }
 
 #design-two{
-    grid-area: 28 / 1 / span 17 / span 20;
+    grid-area: 2 / 1 / span 1 / span 15;
 }
 
 #design-three{
-    grid-area: 1 / 31 / span 40 / span 30;
+    grid-area: 1 / 31 / span 1 / span 20;
 }
 
 #design-four{
-    grid-area: 28 / 15 / span 24 / span 40;
+    grid-area: 2 / 17 / span 2 / span 20;
 }
 
 #design-five {
-    grid-area: 30 / 30 / span 40 / span 25;
+    grid-area: 2 / 30 / span 1 / span 20;
 }
 @media only screen and (max-width:768px) {
     .project-box {
@@ -479,6 +485,21 @@ nav ul li a{
         margin-right: 2vw;
     }
 
+    /* Graphic Design Section */
+
+    .projects-container-design {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .projects-container-design img{
+        width: 90%;
+        padding: 2vw;
+    }
+
+    #projects {
+        height: 545vh;
+    }
 
 }
 /* Snap to Scroll */
@@ -492,7 +513,7 @@ body {
 .container {
     width: 100%;
     height: 100%;
-    scroll-snap-type: y proximity;
+    scroll-snap-type: y mandatory;
     overflow-y: scroll;
 }
 
@@ -504,10 +525,5 @@ section {
 
 
 #contact-me {
-    background-color: rgba(128, 0, 0, 0.5);
-}
-
-
-#projects {
-    height: 290vh;
+    background-color: rgba(300, 0, 0, 0.5);
 }
