--- a/resources/style.css
+++ b/resources/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    
+    max-width: 100%;
 
 }
 
@@ -498,7 +498,7 @@ nav ul li a{
     }
 
     #projects {
-        height: 545vh;
+        height: 550vh;
     }
 
 }
