--- a/resources/style.css
+++ b/resources/style.css
@@ -500,6 +500,63 @@ nav ul li a{
     }
 
 }
+
+
+/* Contact Me */
+
+
+.plane-and-circle {
+    display: grid;
+    grid-template: repeat(20, 1fr) / repeat(20, 1fr);
+    width: 100%;
+    height: 50vh;
+    margin-bottom: 5%;
+}
+
+
+#contact-me h1 {
+    text-align: center;
+    font-size: 15vh;
+    grid-area: 7 / 10 / 11 / 11;
+    z-index: 1;
+}
+
+#contact-me img {
+    grid-area: 1 / 1 / 11 / 11;
+}
+
+#circle-icon {
+    background-color: rgba(6, 68, 151, 0.5);
+    width: 20vw;
+    height: 20vw;
+    border-radius: 0% 50% 50% 50%;
+    grid-area: 8 / 2 / 11 / 11;
+    box-shadow: 0 25px 50px rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(10px);
+}
+
+
+.email-text-container {
+    display: flex;
+    justify-content: center;
+    box-shadow: 0 25px 50px rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(10px);
+    background: transparent;
+    width: 90%;
+    margin: 0 auto;
+    border-radius: 80px 0 80px 80px;
+
+}
+
+.email-text-container h2{
+    font-size: 4vw;
+    text-align: center;
+    padding: 4vh;
+}
+
+#copy-text {
+    border-left: #064497 solid 20px;
+}
 /* Snap to Scroll */
 
 body {
@@ -522,7 +579,7 @@ section {
 }
 
 
-#contact-me {
+#more {
     background-color: rgba(300, 0, 0, 0.5);
 }
 
