finish v1 of website

--- a/resources/style.css
+++ b/resources/style.css
@@ -51,6 +51,7 @@ h4 {
     padding: 20px;
     font-size: 20vh;
 }
+
 /* Nav Bar */
 
 nav {
@@ -90,6 +91,7 @@ nav ul li a{
 }
 
 .burger div{
+    border-radius: 10px;
     width: 25px;
     height: 4px;
     background-color: white;
@@ -170,16 +172,17 @@ nav ul li a{
     }
 
     .toggle .line1 {
-        border-radius: 10px;
         transform: rotate(-45deg) translate(-6px, 6px);
     }
     .toggle .line2 {
         opacity: 0;
     }
     .toggle .line3 {
-        border-radius: 10px;
         transform: rotate(45deg) translate(-6px, -6px);
 
+    }
+    .toggle .cover {
+        display: block;
     }
 }
 /* Paper Plane */
@@ -527,13 +530,9 @@ nav ul li a{
 
 #contact-me img {
     grid-area: 1 / 1 / 11 / 11;
-    animation: plane 2s ease-in-out infinite;
+    animation: float 2s ease-in-out infinite;
 }
-@keyframes plane {
-    0% { transform: translate(-100,  0px); }
-    50%  { transform: translate(100px, 100px); }
-    100%   { transform: translate(100, -0px); }   
-}
+
 #circle-icon {
     background-color: rgba(6, 68, 151, 0.5);
     width: 20vw;
@@ -542,7 +541,13 @@ nav ul li a{
     grid-area: 8 / 2 / 11 / 11;
     box-shadow: 0 25px 50px rgba(0, 0, 0, 0.2);
     backdrop-filter: blur(10px);
-    animation: float 1s ease-in-out infinite;
+    animation: circle 3s ease-in-out infinite;
+}
+
+@keyframes circle {
+    0% { transform: rotate(-90deg); }
+    50%  { transform: rotate(90deg); }
+    100%   { transform: rotate(-90deg); }   
 }
 
 
